--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,17 @@
-aiohttp
-aiosignal
-altair
-async-timeout
-attrs
-beautifulsoup4
-blinker
-cachetools
-certifi
-charset-normalizer
-click
-colorama
-dataclasses-json
-decorator
-faiss-cpu
-filelock
-frozenlist
-fsspec
-gitdb
-GitPython
-greenlet
-html2text
-huggingface-hub
-idna
-importlib-metadata
-Jinja2
-joblib
-jsonschema
-jsonschema-specifications
-langchain==0.0.354
-langchain_community==0.0.38
-langchain_openai==0.0.8
-langsmith
-lxml
-markdown-it-py
-MarkupSafe
-marshmallow
-mdurl
-mpmath
-multidict
-mypy-extensions
-networkx
-nltk
-numexpr
-numpy
-openai
-openapi-schema-pydantic==1.10.12
-packaging
-pandas
-Pillow
-protobuf
-pyarrow
-pydantic
-pydeck
-Pygments
-Pympler
-PyPDF2
-python-dateutil
-python-docx
-python-dotenv
-pytz
-pytz-deprecation-shim
-PyYAML
-referencing
-regex
-requests
-rich
-rpds-py
-safetensors
-scikit-learn
-scipy
 sentence-transformers
-sentencepiece
-six
-smmap
-SQLAlchemy
-streamlit
-streamlit-chat
-sympy
-tenacity
-threadpoolctl
-tokenizers
-toml
-toolz
-torch
-torchvision
-tornado
-tqdm
 transformers
-typing-inspect
-typing_extensions
-tzdata
-tzlocal
-urllib3
-validators
-watchdog
-yarl
-zipp
+torch
+protobuf
+streamlit==1.25.0
+streamlit-chat==0.1.1
+PyPDF2==3.0.1
+python-docx==0.8.11
+openai==0.27.8
+langchain==0.0.251
+faiss-cpu==1.7.4
+tqdm==4.65.0
+numpy==1.25.2
+requests==2.31.0
+beautifulsoup4==4.12.2
+html2text==2020.1.16
+python-dotenv==1.0.0
