--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ PyPDF2==3.0.1
 python-docx==0.8.11
 openai==0.27.8
 langchain==0.0.251
+langchain_community==0.0.20
+langchain_openai==0.0.6
 faiss-cpu==1.7.4
 tqdm==4.65.0
 numpy==1.25.2
@@ -15,3 +17,4 @@ requests==2.31.0
 beautifulsoup4==4.12.2
 html2text==2020.1.16
 python-dotenv==1.0.0
+pydantic==1.10.12
