--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
-sentence-transformers
-transformers
-torch
-protobuf
+# core
 streamlit==1.32.0
 streamlit-chat==0.1.1
+python-dotenv>=1.0
+tqdm>=4.66
+numpy>=1.26
+
+# LLM stack
+torch==2.3.0        # CPU wheel – fine for Streamlit Cloud
+transformers==4.43.0
+sentence-transformers==3.4.0
+faiss-cpu>=1.11,<2  # fixes the build error
+langchain==0.2.0
+langchain-community==0.0.86
+langchain-openai==0.1.5
+
+# OpenAI – choose ONE line
+openai==0.27.8      # if your code still uses the legacy v0 API
+# openai==1.29.0    # if you’ve migrated to the new `openai` client
+
+# docs / parsing
 PyPDF2==3.0.1
 python-docx==0.8.11
-openai==0.27.8
-langchain==0.0.251
-langchain_community==0.0.20
-langchain_openai==0.0.6
-faiss-cpu==1.7.4
-tqdm==4.65.0
-numpy==1.25.2
-requests==2.31.0
-beautifulsoup4==4.12.2
+beautifulsoup4>=4.12
 html2text==2020.1.16
-python-dotenv==1.0.0
-pydantic==1.10.12
+requests>=2.31
+
+# misc
+protobuf>=4.25      # avoids old-protobuf / torch clashes
+pydantic==1.10.14   # openai-0.27 needs pydantic 1.x
