--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+sentence-transformers
+transformers
+torch
+protobuf
+
 # ───────── Core app ─────────
 streamlit==1.32.0          # UI framework
 streamlit-chat==0.1.1      # chat component
