--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ fiona                   # For reading shapefiles (if ever needed)
 pyproj                  # For coordinate reference systems
 rtree                   # Optional but helps with spatial joins (used in geopandas)
 streamlit-folium
+geopy
